2011-06-22  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.18.1 Released.

	* AST-2011-008, AST-2011-010

2011-04-25  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.18 Released.

	* AST-2011-005, AST-2011-006

2011-02-23  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.18-rc1 Released.

2011-02-22 15:37 +0000 [r308528]  Andrew Latham <lathama@gmail.com>

	* main/http.c: Add HTTP URI log, use ast_debug for console logging
	  Guessed the log levels based on info that level 3 is the soft
	  roof. Can we create a page / document to define the levels?

2011-02-21 15:00 +0000 [r308414]  Matthew Nicholson <mnicholson@digium.com>

	* main/udptl.c, /: Merged revisions 308413 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.4 ........
	  r308413 | mnicholson | 2011-02-21 08:57:15 -0600 (Mon, 21 Feb
	  2011) | 5 lines Properly check the bounds of arrays when decoding
	  UDPTL packets. Also, remove broken support for receiving UDPTL
	  packets larger than 16k. That shouldn't ever happen anyway.
	  AST-2011-002 FAX-281 ........

2011-02-19 14:03 +0000 [r308329]  Andrew Latham <lathama@gmail.com>

	* main/http.c: Add CSS MIME Type Modern browsers are checking for
	  the MIME Type of pages and in some cases will not load a file if
	  the type is wrong.

2011-02-15 23:33 +0000 [r308007]  Jason Parker <jparker@digium.com>

	* apps/app_queue.c, /: Merged revisions 308002 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.4 ........
	  r308002 | qwell | 2011-02-15 17:32:20 -0600 (Tue, 15 Feb 2011) |
	  10 lines Fix regression that changed behavior of queues when
	  ringing a queue member. This reverts r298596, which was to fix a
	  highly bizarre and contrived issue with a queue member that
	  called into his own queue being transferred back into his own
	  queue. I couldn't reproduce that issue in any way. I think one of
	  the other recent transfer fixes actually fixed this. (closes