@@ -1,3 +1,9 @@
+2011-06-28  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.2.18.2 Released.
+
+	* AST-2011-011
+
 2011-06-22  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.2.18.1 Released.
